modify name ( cookie -> counter )

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>クッキークリッカー</title>
-    <link rel="stylesheet" href="style.css"> <!-- スタイルシートのリンク -->
+    <title>数取器</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="game-container">
-        <img src="cookie.png" id="cookie" alt="Cookie">
+        <img src="counter.png" id="cookie" alt="Cookie">
         <p>スコア: <span id="score">0</span></p>
     </div>
-    <script src="script.js"></script> <!-- JavaScriptファイルのリンク -->
+    <script src="script.js"></script>
 </body>
 </html>
 
