--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="game-container">
-        <img src="counter.png" id="cookie" alt="Cookie">
+        <img src="counter.webp" id="cookie" alt="Cookie">
         <p>スコア: <span id="score">0</span></p>
     </div>
     <script src="script.js"></script>
