add upgrade button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
     <div id="game-container">
         <img src="counter.webp" id="cookie" alt="Cookie">
-        <p>スコア: <span id="score">0</span></p>
+        <p>カウント: <span id="score">0</span></p>
+        <div id="upgrades">
+            <button id="upgradeBtn">アップグレード (コスト: <span id="upgradeCost">10</span> カウント)</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
