add auto countup upgrade

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="counter.webp" id="cookie" alt="Cookie">
         <p>カウント: <span id="score">0</span></p>
         <div id="upgrades">
-            <button id="upgradeBtn">アップグレード (コスト: <span id="upgradeCost">10</span> カウント)</button>
+            <button id="upgradeBtn">カウント/click 強化 (コスト: <span id="upgradeCost">10</span> カウント)</button>
         </div>
     </div>
     <script src="script.js"></script>
