--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="game-container">
-        <p id="click-instruction">数取器をクリックしてカウントを増やそう！</p>
+        <p id="click-instruction">数取器をクリック！</p>
         <img src="counter.webp" id="cookie" alt="Cookie">
         <p>カウント: <span id="score">0</span></p>
         <div id="upgrades">
