--- a/promo/index.html
+++ b/promo/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ゲームプロモーションページ</title>
+    <title>数取器ゲームのプロモーション</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <p>クリックしてスコアを稼ごう！</p>
     </header>
     <section id="main-visual">
-        <img src="main.webp" alt="ゲームのメインビジュアル">
+        <img src="main.webp" alt="数取器ゲームのメインビジュアル">
     </section>
     <section id="features">
         <h2>ゲームの特徴</h2>
@@ -20,6 +20,21 @@
             <li>クリックだけで遊べる簡単操作</li>
             <li>多彩なアップグレードで飽きない</li>
             <li>高スコアを目指して世界中のプレイヤーと競う</li>
+        </ul>
+    </section>
+    <section id="gameplay">
+        <h2>ゲームプレイの特徴</h2>
+        <p>独自のカウンター機構により、毎クリックが快感！アップグレードを重ねることで、得られるスコアは加速度的に増加します。</p>
+    </section>
+    <section id="community">
+        <h2>コミュニティとの連携</h2>
+        <p>ゲーム内で友達を作ったり、チャレンジに参加してレアアイテムを獲得しよう。活発なコミュニティで情報交換も。</p>
+    </section>
+    <section id="faq">
+        <h2>よくある質問</h2>
+        <ul>
+            <li><strong>Q: ゲームは無料ですか？</strong><br>A: はい、基本プレイは無料です。</li>
+            <li><strong>Q: アップグレードには何がありますか？</strong><br>A: クリック効率を上げるアップグレードや、自動でスコアを増やすアップグレードなど、多彩なオプションがあります。</li>
         </ul>
     </section>
     <section id="download">
