--- a/promo/index.html
+++ b/promo/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>数取器ゲーム</h1>
-        <p>クリックしてスコアを稼ごう！</p>
+        <p>ただクリックするだけで、無限の楽しみが広がる。</p>
     </header>
     <section id="main-visual">
         <img src="main.webp" alt="数取器ゲームのメインビジュアル">
@@ -17,27 +17,23 @@
     <section id="features">
         <h2>ゲームの特徴</h2>
         <ul>
-            <li>クリックだけで遊べる簡単操作</li>
-            <li>多彩なアップグレードで飽きない</li>
-            <li>高スコアを目指して世界中のプレイヤーと競う</li>
+            <li>直感的な操作で誰でも楽しめる</li>
+            <li>成長を感じられるアップグレードシステム</li>
+            <li>達成感を提供するスコアシステム</li>
         </ul>
     </section>
-    <section id="gameplay">
-        <h2>ゲームプレイの特徴</h2>
-        <p>独自のカウンター機構により、毎クリックが快感！アップグレードを重ねることで、得られるスコアは加速度的に増加します。</p>
-    </section>
-    <section id="community">
-        <h2>コミュニティとの連携</h2>
-        <p>ゲーム内で友達を作ったり、チャレンジに参加してレアアイテムを獲得しよう。活発なコミュニティで情報交換も。</p>
+    <section id="reviews">
+        <h2>プレイヤーの声</h2>
+        <p>「このゲームは本当に中毒性があって楽しい！」</p>
     </section>
     <section id="faq">
         <h2>よくある質問</h2>
         <ul>
             <li><strong>Q: ゲームは無料ですか？</strong><br>A: はい、基本プレイは無料です。</li>
-            <li><strong>Q: アップグレードには何がありますか？</strong><br>A: クリック効率を上げるアップグレードや、自動でスコアを増やすアップグレードなど、多彩なオプションがあります。</li>
+            <li><strong>Q: アップグレードは必要ですか？</strong><br>A: 必要ありませんが、アップグレードによってゲームがより楽しくなります。</li>
         </ul>
     </section>
-    <section id="download">
+    <section id="play-now">
         <h2>今すぐプレイ！</h2>
         <a href="../index.html" class="play-button">プレイする</a>
     </section>
