--- a/promo/index.html
+++ b/promo/index.html
@@ -5,6 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>数取器ゲームのプロモーション</title>
     <link rel="stylesheet" href="style.css">
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    const sections = document.querySelectorAll('section');
+
+    function revealSection() {
+        for (const section of sections) {
+            const sectionTop = section.getBoundingClientRect().top;
+            const sectionHeight = section.getBoundingClientRect().height;
+
+            if (sectionTop < window.innerHeight - sectionHeight / 3) {
+                section.classList.add('active');
+            } else {
+                section.classList.remove('active');
+            }
+        }
+    }
+
+    window.addEventListener('scroll', revealSection);
+    revealSection(); // 初期表示時にも実行
+});
+</script>
+
+
 </head>
 <body>
     <header>
