--- a/promo/index.html
+++ b/promo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>数取器ゲームのプロモーション</title>
+    <title>Web数取器のプロモーション</title>
     <link rel="stylesheet" href="style.css">
 <script>
 document.addEventListener("DOMContentLoaded", function() {
@@ -31,14 +31,14 @@ document.addEventListener("DOMContentLoaded", function() {
 </head>
 <body>
     <header>
-        <h1>数取器ゲーム</h1>
-        <p>ただクリックするだけで、無限の楽しみが広がる。</p>
+        <h1>数取器</h1>
+        <p>ただカウントするだけで、無限の楽しみが広がる。</p>
     </header>
     <section id="main-visual">
-        <img src="main.webp" alt="数取器ゲームのメインビジュアル">
+        <img src="main.webp" alt="数取器のメインビジュアル">
     </section>
     <section id="features">
-        <h2>ゲームの特徴</h2>
+        <h2>数取器の特徴</h2>
         <ul>
             <li>直感的な操作で誰でも楽しめる</li>
             <li>成長を感じられるアップグレードシステム</li>
@@ -46,14 +46,14 @@ document.addEventListener("DOMContentLoaded", function() {
         </ul>
     </section>
     <section id="reviews">
-        <h2>プレイヤーの声</h2>
-        <p>「このゲームは本当に中毒性があって楽しい！」</p>
+        <h2>利用者の声</h2>
+        <p>「この数取器は本当に中毒性があって楽しい！」</p>
     </section>
     <section id="faq">
         <h2>よくある質問</h2>
         <ul>
-            <li><strong>Q: ゲームは無料ですか？</strong><br>A: はい、基本プレイは無料です。</li>
-            <li><strong>Q: アップグレードは必要ですか？</strong><br>A: 必要ありませんが、アップグレードによってゲームがより楽しくなります。</li>
+            <li><strong>Q: 数取器の使用は無料ですか？</strong><br>A: はい、基本プレイは無料です。</li>
+            <li><strong>Q: アップグレードは必要ですか？</strong><br>A: 必要ありませんが、アップグレードによって数取器がより楽しくなります。</li>
         </ul>
     </section>
     <section id="play-now">
