add github link

--- a/promo/index.html
+++ b/promo/index.html
@@ -60,6 +60,12 @@ document.addEventListener("DOMContentLoaded", function() {
         <h2>今すぐプレイ！</h2>
         <a href="../index.html" class="play-button">プレイする</a>
     </section>
+    <section id="open-source">
+        <h2>オープンソースで公開</h2>
+        <p>この数取器はオープンソースプロジェクトとしてGitHubで公開されています。</p>
+        <p>誰でも自由にダウンロードして、改良やカスタマイズが可能です。</p>
+        <a href="https://github.com/proconlife/clicker-game" class="play-button">GitHubで見る</a>
+    </section>
 </body>
 </html>
 
